--- a/source/_posts/幻.md
+++ b/source/_posts/幻.md
@@ -4,6 +4,7 @@ date: 2024-01-23 02:51:19
 tags:
     - Misc
     - Borrowed_eyes
+    - Music
 cover: /2024/01/22/幻/paypaydome.jpg
 excerpt: またね
 ---
