--- a/source/_posts/2024-3.md
+++ b/source/_posts/2024-3.md
@@ -31,7 +31,7 @@ excerpt: 四月
 
 ![喜欢“小”乐队的好处之一](four-for-fourteen.jpg)
 
-任何理解indie呢？
+如何理解indie呢？
 
 专心编织自己的世界，而不是为主流世界提供肥料。若有幸吸引“志同道合”之人，只是意外之喜。
 
@@ -41,7 +41,7 @@ excerpt: 四月
 
 但还是去上海见了ACAね，至少让我在这短暂的两小时内可以沉浸在甜蜜的幻觉中。勉强抢到了票，内场倒数第二排，但事实证明比位置更影响观感的是令人无奈的观众。
 
-这次的曲目和两个月前的音乐节相比有很大调整，几乎就是一场日本本土演唱会的配置。从细节上能看出准备十分充分，无论是唱法还是成员的solo都有调整。其实这对于第一次在中国演出的他们并无必要，毕竟大多数人是第一次接触他们的现场。但正是这样的做法让他们在音乐之外更受喜爱，不是吗？
+这次的曲目和两个月前的音乐节相比有很大调整，几乎就是一场日本本土演唱会的配置。从细节上能看出准备十分充分，无论是编曲还是成员的solo都有调整。其实这对于第一次在中国演出的他们并无必要，毕竟大多数人是第一次接触他们的现场。但正是这样的做法让他们在音乐之外更受喜爱，不是吗？
 
 ![听到「勘冴えて悔しいわ」的时候有些出神，好像自己的名字被念到一样](kuyashiiwa.png)
 
